# actix-svc-template

./: Cargo.toml  Dockerfile  compose.yaml
caddy/conf/: Caddyfile
src/: main.rs
src/db/: migrations.rs  mod.rs  models.rs
src/docs/: mod.rs
src/routes/: example.rs  mod.rs  products.rs
src/tracing/: mod.rs
