[package]
name = "actix-svc-template"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-governor = "0.10.0"
actix-web = "4.11.0"
anyhow = "1.0.100"
dotenvy = { version = "0.15.7", optional = true}
opentelemetry = { version="0.31.0", optional=true }
opentelemetry-otlp = { version="0.31.0", optional=true }
opentelemetry_sdk = { version="0.31.0", optional=true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio"] }
tokio = { version = "^1.47.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
tracing = { version="0.1.41", optional=true }
tracing-actix-web = { version="0.7.19", optional=true }
tracing-opentelemetry = { version="0.32.0", optional=true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"], optional=true }
welds = { version = "0.4.18", features = ["migrations", "postgres"] }

[features]
default = ["tracing", "env"]
tracing = [
  "dep:opentelemetry", 
  "dep:opentelemetry_sdk", 
  "dep:opentelemetry-otlp", 
  "dep:tracing-subscriber", 
  "dep:tracing", 
  "dep:tracing-actix-web", 
  "dep:tracing-subscriber",
  "dep:tracing-opentelemetry"
]
env = ["dep:dotenvy"]
docs = []
